[gd_scene load_steps=8 format=3 uid="uid://j0vtjt8mhtlx"]

[ext_resource type="Texture2D" uid="uid://mkaked2rx28n" path="res://gui/background.jpg" id="1_2no26"]
[ext_resource type="Script" uid="uid://buoxro2jgixa4" path="res://scripts/auction.gd" id="1_gjsic"]
[ext_resource type="PackedScene" uid="uid://ce178nojpif7d" path="res://scenes/card.tscn" id="3_gap3f"]
[ext_resource type="FontFile" uid="uid://d0gaa71hjim87" path="res://gui/ProtestRevolution-Regular.ttf" id="4_8gxxa"]
[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://gui/FlatUI4/kenneyUI-red.tres" id="5_xi5ty"]
[ext_resource type="Theme" uid="uid://bnhngmri4tfgr" path="res://gui/FlatUI4/kenneyUI-green.tres" id="6_xi5ty"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://gui/FlatUI4/kenneyUI.tres" id="7_xi5ty"]

[node name="Auction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gjsic")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(540, 950)
texture = ExtResource("1_2no26")

[node name="Card" parent="." instance=ExtResource("3_gap3f")]
layout_mode = 1
offset_left = 123.0
offset_top = 313.0
offset_right = -157.0
offset_bottom = -511.0
scale = Vector2(0.9, 0.9)

[node name="Tempo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -844.0
offset_right = 188.0
offset_bottom = -689.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 128
text = "59"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MarketPrice" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = 471.0
offset_right = 504.0
offset_bottom = 626.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 84
text = "Market Price:"
autowrap_mode = 3

[node name="BidPrice" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = 615.0
offset_right = 504.0
offset_bottom = 770.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 84
text = "Bid Price:"
autowrap_mode = 3

[node name="CardInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = 751.0
offset_right = 504.0
offset_bottom = 906.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 84
text = "Bid Price:"
autowrap_mode = 3

[node name="ButtonHome" type="Button" parent="."]
layout_mode = 0
offset_left = 910.0
offset_top = 1726.0
offset_right = 1041.0
offset_bottom = 1849.25
size_flags_horizontal = 3
theme = ExtResource("5_xi5ty")
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 72
text = "x"

[node name="Bid" type="Button" parent="."]
layout_mode = 0
offset_left = 661.0
offset_top = 1404.0
offset_right = 1061.0
offset_bottom = 1537.25
size_flags_horizontal = 3
theme = ExtResource("6_xi5ty")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 92
text = "Bid +10%"

[node name="Bid2" type="Button" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 1555.0
offset_right = 1060.0
offset_bottom = 1688.25
size_flags_horizontal = 3
theme = ExtResource("6_xi5ty")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 92
text = "Bid +20%"

[node name="Notif" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -689.0
offset_top = -375.0
offset_right = 694.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_xi5ty")

[node name="Label" type="Label" parent="Notif"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_8gxxa")
theme_override_font_sizes/font_size = 136
text = "NOT ENOUGH MONEY"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="ButtonHome" to="." method="_on_button_home_pressed"]
[connection signal="pressed" from="Bid" to="." method="_on_bid_pressed"]
[connection signal="pressed" from="Bid2" to="." method="_on_bid_2_pressed"]
